Add support for different adaface models

--- a/_docs/index.html
+++ b/_docs/index.html
@@ -221,6 +221,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Os arquivos onnx dos modelos de detecção (det_10g.onnx), pose (1k3d68.onnx) e gênero/idade (genderage.onnx) devem estar na pasta <code>~/.insightface/model/sepaelv2/</code></p>
 <p>O arquivo onnx do modelo de reconhecimento (adaface_ir101web12m.onnx) deve estar na pasta <code>~/.insightface/model/sepaelv2/adaface/</code></p>
 <p>O arquivo onnx do modelo magface (magface_iresnet100.onnx) deve estar na pasta <code>~/.insightface/model/sepaelv2/magface/</code></p>
+<p>A partir da versão 0.1.5 é possível utilizar outros modelos além do <code>sepaelv2</code></p>
 </section>
 <section id="como-utilizar" class="level2">
 <h2 class="anchored" data-anchor-id="como-utilizar">Como utilizar</h2>
